# TekLeague

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  exec.sh
assets/config/: ethan.toml  map.toml  windows.toml
assets/config/buildings/: tower.toml
assets/config/champions/: ethan.toml
assets/configs/buildings/: fontain.toml  nexus.toml  tower.toml
assets/configs/champions/: croly.toml  ethan.toml  goatier.toml  gules.toml  ttheodore.toml
assets/configs/creaps/: range_blue_creap.toml  range_blue_creap_down.toml  range_blue_creap_top.toml  range_red_creap.toml
assets/configs/creatures/: nash.toml
assets/configs/misc/: collisions.toml
client/: CMakeLists.txt
client/assets/configs/: buttons.toml  collisions.toml  map.toml  windows.toml
client/assets/configs/buildings/: Bluetower.toml  Redtower.toml  nexus.toml  tower.toml  zone_enemy.toml
client/assets/configs/champions/: croly.toml  ethan.toml  goatier.toml  gules.toml  ttheodore.toml
client/assets/configs/creaps/: range_blue_creap.toml  range_blue_creap_down.toml  range_blue_creap_top.toml  range_red_creap.toml
client/assets/configs/creatures/: nash.toml
client/assets/configs/hud/: champion_info.toml
client/assets/configs/ui/: backgrounds.toml  buttons.toml  end_game.toml  health_bar.toml  logo.toml  text_input.toml
client/assets/configs/ui/lobby/: book.toml  buttons.toml  users.toml
client/assets/configs/ui/parameters/: background.toml  button.toml
client/assets/configs/ui/search_lobby/: button.toml
client/assets/images/champions/goatier/: Goatier-20260112-181142.piskel  Goatier-20260112-202559.piskel
client/assets/images/champions/gules/: JulesG-20260113-135821.piskel
client/include/: Client.hpp  LobbyContext.hpp  LobbyManager.hpp  client_components.hpp  client_systems.hpp  scenes.hpp
client/include/scenes/: end_game.hpp  ingame.hpp  lobby.hpp  main.hpp  parameters.hpp  search_lobby.hpp
client/include/ui/: button_status.hpp  buttons.hpp
client/src/: Client.cpp  ClientHandlers.cpp  ClientSenders.cpp  LobbyContext.cpp  LobbyManager.cpp  main.cpp
client/src/scenes/: EndGame.cpp  InGame.cpp  Main.cpp  Parameters.cpp  SearchLobby.cpp
client/src/scenes/ingame/: Hud.cpp  InGame.cpp
client/src/scenes/lobby/: InLobby.cpp  Lobby.cpp  SearchLobby.cpp  SelectChampion.cpp
client/src/systems/: minions_animation.cpp  track_stat.cpp  updateSticky.cpp  update_button.cpp  update_hud.cpp
config/: protocol.json  protocol.md
include/: Game.hpp  configs.hpp  entities.hpp  entities_helper.hpp  latencies.hpp  my.hpp  scenes.hpp  spells.hpp
include/components/: building.hpp  champion.hpp  circle_hitbox.hpp  directed.hpp  gold.hpp  gules.hpp  health.hpp  magic_attack.hpp  on_death.hpp  ranged_zone.hpp  stat_pool.hpp  tower.hpp
include/components/competences/: auto_attack.hpp  auto_track.hpp  spells.hpp  target.hpp
include/components/interaction/: mana.hpp  team.hpp
include/components/items/: inventory.hpp  item.hpp
include/components/minions/: minions.hpp  minionsRoute.hpp
include/components/stats/: gold.hpp  health.hpp  mana.hpp  stat_pool.hpp  xp.hpp
include/components/ui/: button.hpp
include/components/ui/game/: sticky.hpp  track_stat.hpp
include/configs/: components.hpp  entities.hpp  systems.hpp
include/lobby/: Lobby.hpp  LobbyContext.hpp
server/: CMakeLists.txt
server/include/: LobbyContext.hpp  Server.hpp  scenes.hpp  systems.hpp
server/src/: LobbyContext.cpp  LobbyContextGetUpdates.cpp  Server.cpp  ServerHandlers.cpp  ServerSenders.cpp  main.cpp
server/src/scenes/: InGame.cpp  Wait.cpp
src/: Game.cpp  main.cpp
src/Lobby/: Lobby.cpp  LobbyContext.cpp  LobbyContextGetUpdates.cpp
src/components/: auto_attack.cpp  auto_track.cpp  building.cpp  button.cpp  champion.cpp  circle_hitbox.cpp  directed.cpp  gold.cpp  gules.cpp  health.cpp  inventory.cpp  item.cpp  magic_attack.cpp  mana.cpp  on_death.cpp  stat_pool.cpp  target.cpp  tower.cpp  xp.cpp  zone_ranged.cpp
src/components/competences/: auto_attack.cpp  auto_track.cpp  spells.cpp  target.cpp
src/components/interaction/: health.cpp  mana.cpp  team.cpp
src/components/items/: inventory.cpp  item.cpp
src/components/minions/: minions.cpp  minionsRoute.cpp
src/components/stats/: gold.cpp  health.cpp  mana.cpp  stat_pool.cpp  xp.cpp
src/components/ui/: button.cpp
src/components/ui/game/: sticky.cpp  track_stat.cpp
src/scenes/: Client.cpp  InGame.cpp  Menu.cpp
src/signals/: player_movement.cpp
src/spells/: goatier_spell1.cpp  goatier_spell2.cpp  gules_spell1.cpp  gules_spell2.cpp  no_spell.cpp
src/systems/: TrackStat.cpp  auto_attacks.cpp  champ_mov.cpp  circle_pushback.cpp  deal_damage.cpp  entity_direction.cpp  fontain.cpp  handle_timeout.cpp  kill_all_entity.cpp  minions_mov.cpp  regen.cpp  spawn_death_entity.cpp  target_player.cpp  targeted_damage.cpp  track_target.cpp  updateSticky.cpp
